--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -11,9 +11,9 @@
     </div>
 </section>
 {% else %}
-<section id="header-banner" style="height: 30px;position: relative;width: 100%;overflow-x: hidden;">
-        <p id="para1" style="top:5px">🔥 100% сигурно купување</p>  
-        <p id="para2" style="top:5px">🚚 Бесплатна достава на сите производи</p>
+<section id="header-banner" style="display: flex;align-items:center; justify-content: center; gap: 10px; align-items: center;" class="header-banner-for-product-page">
+        <p id="header-banner-product-text">🔥 100% сигурно купување</p>
+        <p style="font-weight:500;text-align:center;font-size:15px;color:white" class="desktop">🚚 Бесплатна достава на сите производи</p>  
 </section>
 {% endif %}
 <header id="header">
