--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -9,7 +9,10 @@
             <div class="product">
                 
                 <a href="{% url 'product-page' product.slug %}" class="product-link" aria-label="Линк до продукт" style="position:relative">
-                <img src="{{ product.thumbnail_loop.url }}" alt="Product image" width="250" height="250" class="product-feed-thumbnail">
+                <picture>
+                    <source srcset="{{ product.thumbnail_loop.url }}" type="image/webp">
+                    <img src="{{ product.thumbnail_loop_as_jpeg.url }}" alt="Product image" width="250" height="250" class="product-feed-thumbnail">
+                </picture>
                 <h2 class="product-feed-title">{{ product.title }}</h2>
                 <div class="product-sale-badge"><p>-{{product.get_percentage_off}}%</p></div>
                 {% if product.review_average > 0 %}
