--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -34,11 +34,10 @@
         <p class="offer-timer" style="font-weight: 600;">ПОНУДАТА ИСТЕКУВА ЗА <br><span id="timer" style="font-size: 24px">03:00</span></p>
         <input type="hidden" class="order_id" value="{{ order.id }}">
         <input type="hidden" class="prod_id" value="{{ offerproduct.product.id }}">
-        {% if webp_support %}
-        <img src="{{ offerproduct.product.thumbnail.url }}" alt="" width="250" height="250">
-        {% else %}
-        <img src="{{ offerproduct.product.thumbnail_as_jpeg.url }}" alt="" width="250" height="250">
-        {% endif %}
+        <picture>
+            <source src="{{ offerproduct.product.thumbnail }}" type="image/webp">
+            <img src="{{ offerproduct.product.thumbnail_as_jpeg.url }}" alt="" width="250" height="250">
+        </picture>
         {% if offerproduct.attribute_name  %}
         <p class="offer-ttl">{{ offerproduct.product.title }} - {{offerproduct.attribute_name}}</p>
         <p class="rgl_price">{{ offerproduct.product.sale_price }} ден</p>
@@ -83,11 +82,12 @@
                     {% if item.upsell_thumbnail %}
                         <img src="{{ item.upsell_thumbnail }}" alt="" width="45" height="45">
                     {% else %}
-                        {% if webp_support %}
-                        <img src="{{ item.product.thumbnail_loop.url }}" alt="" width="45" height="45">
-                        {% else %}
-                        <img src="{{ item.product.thumbnail_loop_as_jpeg.url }}" alt="" width="45" height="45">
-                        {% endif %}
+                    
+                        <picture>
+                            <source src="{{ item.product.thumbnail_loop.url }}" type="image/webp">
+                            <img src="{{ item.product.thumbnail_loop_as_jpeg.url }}" alt="" width="45" height="45">
+                        </picture>
+
                     {% endif %}
                     {% if item.attribute_name %}
                     <p class="item-name">{{ item.product.title }} - {{item.attribute_name}}</p>
