--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -193,7 +193,10 @@ select {
   }
 </style>
 <div class="container-fluid text-center border py-3">
-    <h3>Аналитика за производи</h3>
+  <div class="row">
+    <h3 class="col-8">Аналитика за производи</h3>
+    <a href="{% url 'create_new_ad' %}" class="col-4">Креири кампањи</a>
+  </div>
 </div>
 <div class="container-xxl d-flex p-1 border-bottom border-start border-end text-uppercase overflow-hidden align-items-center" id="campaign-list">
   {% for option in search_options %}
