--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -311,15 +311,15 @@ select {
   </div>
   <form class="p-5 border border-primary rounded" >
     <div class="row d-flex align-items-end">
-      <div class="col-4">
+      <div class="col-md-4">
         <label for="row_ad_spend">Внеси го соодветниот AD SPEND според датата</label>
         <input type="number" class="form-control border border-primary" placeholder="(Бројка во денари)" name="row_ad_spend" id="old_row_ad_spend" value="">
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <label for="old_row_quantity" class="">Внеси ја соодветната количина</label>
         <input type="number" class="form-control border border-primary" placeholder="Бројка" name="old_row_quantity" id="old_row_quantity" value="">
       </div>
-      <div class="col-4">
+      <div class="col-md-4">
         <label for="row_date" class="">Внеси jа датата за кој ред е наменена</label>
         <input type="date" class="form-control border border-primary" placeholder="Одбери дата" name="row_date" id="old_row_date">
       </div>
