--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -321,6 +321,7 @@
             <a href="{% url 'reklamacija-page' %}">Рекламација</a>
         </div>
         <div class="footer-item">
+            <h3 class="desktop" style="visibility:hidden">Полиси</h3>
             <a href="{% url 'rights-of-usage-page' %}">Правила на користење</a>
             <a href="{% url 'cookies-page' %}">Политика за приватност и колачиња</a>
         </div>
