--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -205,7 +205,7 @@
                 <input type="text" name="quantity" class="qty-input" value="1" aria-label="Количина"> 
                 <button class="increment-btn">+</button>
             </div>
-            <p class="stock-notice">Уштe <span class="stock-number">{{ product.fake_quantity }} парчиња</span> на залиха</p>
+            <p class="stock-notice"><span style="font-size:16px">🔥</span>  Уштe <span class="stock-number">{{ product.fake_quantity }} парчиња</span> на залиха</p>
         </div>
         {% if attributes %}
                 {% if upsells %}
