--- a/analytics/templates/analytics/create_new_ad.html
+++ b/analytics/templates/analytics/create_new_ad.html
@@ -327,6 +327,7 @@ select:not(.form-select) {
                         <div class="col-12 my-2 media_holder" >
                             <img src="" alt="" class="img-thumbnail media_preview ad_type_photo_input">
                         </div>
+                        <button class="btn btn-dark btn-sm my-2 create_ad_preview ad_type_is_photo" type="button">Види Preview</button>
                     </div>
                     <div class="my-2 ad_media_video" style="display:none;">
                         <div class="col-12 media_input">
@@ -358,6 +359,7 @@ select:not(.form-select) {
                                 
                             </div>
                         </div>
+                        <button class="btn btn-dark btn-sm my-2 create_ad_preview ad_type_is_video" type="button">Види Preview</button>
                         
                         </div>
                         <div class="col-12 mx-auto border-top border-dark ad-button-holder">
@@ -381,6 +383,7 @@ select:not(.form-select) {
                 
             </form>
             <div class="col-md-4" >
+              <div class="row">
                 <div class="card text-center sticky-top" id="product_card" style="display:none;">
                     <img src="" class="card-img-top" id="product-card-image">
                     <div class="card-body">
@@ -394,6 +397,8 @@ select:not(.form-select) {
                       <a href="#" target="_blank" class="card-link" id="product-card-link" >Погледни (отвара во нов tab)</a>
                     </div>
                   </div>
+              </div>
+              <div class="row my-4 iframe_holder"></div>
             </div>
             </div>
 
