--- a/analytics/templates/analytics/create_new_ad.html
+++ b/analytics/templates/analytics/create_new_ad.html
@@ -382,7 +382,7 @@ select:not(.form-select) {
                 </div>
                 
             </form>
-            <div class="col-md-4" >
+            <div class="col-md-4" style="position:sticky!important; height:100%!important;top:5%">
               <div class="row">
                 <div class="card text-center sticky-top" id="product_card" style="display:none;">
                     <img src="" class="card-img-top" id="product-card-image">
